--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,28 @@
   margin: 0;
   padding: 0;
 }
+.button-primary{
+  background-color: #1DB954;
+  color: white;
+  font-size: 16px;
+  border: 0;
+  border-radius: 45px;
+  padding: 14px 66px;
+  outline: rgba(0,0,0,1);
+}
+.title-section{
+    font-size: 24px;
+    padding-left: 10px;
+    &::after{
+        content: '';
+        margin-top: 5px;
+        display: block;
+        width: 32px;
+        height: 4px;
+        border-radius: 4px;
+        background-color: #1DB954;
+    }
+}
 .header{
   height: 100vh;
   background: rgb(0,0,0);
@@ -17,6 +39,7 @@
       padding-right: 20px;
       background-color: rgba(0,0,0,0);
       border: none;
+      outline: rgba(0,0,0,1);
     }
   }
   .image{
@@ -33,13 +56,60 @@
     font-size: 16px;
     color: #CCCCCC;
   }
-  .button-primary{
-    background-color: #1DB954;
-    color: white;
-    font-size: 16px;
-    border: 0;
-    border-radius: 45px;
-    padding: 14px 66px;
-    outline: rgba(0,0,0,1);
+}
+
+.about{
+    margin-top: 46px;
+  .panel{
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        margin-top: 46px;
+      .panel-header{
+          margin-top: 10px;
+          display: flex;
+          align-items: center;
+          .image-circle{
+              padding-left: 10px;
+            width: 60px;
+            height: 60px;
+              img{
+                  border-radius: 50%;
+                  width: 60px;
+                  height: 60px;
+              }
+          }
+          .name-text{
+            padding-left: 20px;
+              h4{
+                font-size: 16px;
+                margin: 0;
+              }
+              p{
+                  font-size: 14px;
+                  margin: 0;
+              }
+          }
+      }
+    .panel-img{
+        margin-top: 10px;
+      width: 100%;
+      img{
+        width: 100%;
+      }
+    }
+
+    .panel-description{
+        margin-top: 30px;
+        padding: 20px;
+        text-align: center;
+        p{
+            text-align: left;
+            margin-bottom: 40px;
+        }
+        button{
+            align-content: center;
+        }
+    }
+
   }
 }
