--- a/src/index.scss
+++ b/src/index.scss
@@ -143,3 +143,40 @@
     }
   }
 }
+
+.portafolio {
+  padding: 50px 0 16px 0;
+  .pf-list{
+    padding: 20px;
+    .pf-item{
+      border: 1px solid #ccc;
+      box-shadow: 9px 9px 22px -8px rgba(0,0,0,0.29);
+      border-radius: 10px;
+      margin: 30px 0;
+      .pf-item-img{
+        width: 100%;
+        img{
+          border-radius: 10px 10px;
+          width: 100%;
+        }
+      }
+      .pf-item-body{
+        padding: 25px 20px 30px 20px;
+        .pf-item-title{
+          font-size: 20px;
+        }
+        .pf-item-desc{
+          font-size: 16px;
+        }
+        .pf-item-footer{
+          padding-top: 25px;
+          display: flex;
+          justify-content: space-between;
+          a{
+            color: #1DB954;
+          }
+        }
+      }
+    }
+  }
+}
