--- a/src/index.scss
+++ b/src/index.scss
@@ -180,3 +180,83 @@
     }
   }
 }
+
+.about{
+  &.contacto{
+    margin-top: 0;
+    padding: 46px 0;
+    background-color: #F9F9FB;
+
+  }
+  .panel{
+    .redes{
+      padding: 25px 0;
+      margin-top: 10px;
+      border-top: 1px solid #ccc;
+      .red-item{
+        margin: 20px 0;
+        padding-left: 20px;
+        p{
+          display: inline;
+          padding-left: 10px;
+        }
+      }
+    }
+  }
+}
+
+.footer{
+  padding: 46px 20px 0;
+  background-color: #F0F4F7;
+  .f-name{
+    margin: 17px 0 68px 0;
+    img{
+      margin-bottom: 20px;
+    }
+    h4{
+      font-size: 20px;
+    }
+    p{
+      margin: 0;
+      font-size: 14px;
+    }
+  }
+  .f-about{
+    p{
+      font-size: 16px;
+      margin-bottom: 36px;
+      font-weight: bold;
+    }
+    a{
+      margin: 20px 0;
+      display: block;
+      font-size: 14px;
+      color: #707070;
+    }
+  }
+
+  .f-hello{
+    margin-top: 54px;
+    b{
+      font-size: 16px;
+      margin-bottom: 16px;
+    }
+    .f-h-link{
+      margin-top: 36px;
+      a{
+        margin-right: 30px;
+      }
+    }
+  }
+  .f-cright{
+    margin-top: 175px;
+    padding: 50px 0;
+    border-top: 1px solid #707070;
+    color: #707070;
+    p{
+      margin: 0;
+      text-align: right;
+    }
+  }
+
+}
