--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+/**
+  * Created by: Dalthon
+  */
+
+// mobile first
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -54,6 +60,7 @@
 }
 #modal:checked ~.modal-content{
   display: flex;
+  transition-delay:0.5s;
 }
 
 .modal-container{
@@ -303,4 +310,55 @@
     }
   }
 
+}
+
+// Tablet version
+ /* Small Devices, Tablets */
+ @media only screen and (min-width : 768px) {
+  .modal-container{
+    img{
+      display: none;
+    }
+  }
+  
+  .header{
+    background-image: url("https://dl.dropboxusercontent.com/s/67odh3k79wmck7x/desktop-fondo.jpg?dl=0");
+    background-size: cover; /* Resize the background image to cover the entire container */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    height: 250px;
+    text-align: left;
+    position: relative;
+    z-index: 10;
+    &::after{
+      content: '';
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 250px;
+      top: 0;
+      background: rgb(43,43,43);
+      background: linear-gradient(0deg, rgba(43,43,43,1) 0%, rgba(255,255,255,0) 100%);
+      z-index: -100;
+    }
+    .h-image{
+      display: none;
+      padding-top: 0;
+      margin: 0;
+    }
+    .h-text{
+      position: absolute;
+      // bottom: 60px;
+      bottom: 10%;
+      z-index: 100;
+      padding-left: 10%;
+    }
+    .h-button{
+      position: absolute;
+      top: 40px;
+      top: 10%;
+      z-index: 100;
+      padding-left: 10%;
+    }
+  }
 }
