--- a/src/index.scss
+++ b/src/index.scss
@@ -320,6 +320,9 @@
       display: none;
     }
   }
+  .title-section{
+    padding-left: 6%;   
+  }
   
   .header{
     background-image: url("https://dl.dropboxusercontent.com/s/67odh3k79wmck7x/desktop-fondo.jpg?dl=0");
@@ -351,14 +354,44 @@
       // bottom: 60px;
       bottom: 10%;
       z-index: 100;
-      padding-left: 10%;
+      padding-left: 6%;
     }
     .h-button{
       position: absolute;
       top: 40px;
       top: 10%;
       z-index: 100;
-      padding-left: 10%;
+      padding-left: 6%;
     }
   }
+  .about{
+    .panel{
+      margin: 46px 6%;
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-template-rows: 1fr;
+      border: 1px solid #ccc;
+      .panel-header{
+        margin-top: 0;
+        padding: 10px 20px;
+        border-bottom: 1px solid #ccc;
+        border-left: 1px solid #ccc;
+        height: 70px;
+      }
+      .panel-img{
+        margin-top: 0;
+        grid-column: 2/3;
+        grid-row: 1/3;
+        height: 100%;
+        img{
+          height: 100%;
+        }
+      }
+      .panel-description{
+        margin: 0;
+      }
+    }
+  }
+
+
 }
