--- a/src/index.scss
+++ b/src/index.scss
@@ -169,27 +169,32 @@
 .abilities {
   padding: 50px 0;
   background-color: #F9F9FB;
-  .abilities-list{
-    margin: 46px 0;
-    .item{
-      display: flex;
-      align-items: center;
-      padding-left: 20px;
-      margin: 30px 0;
-      .img{
-        width: 62px;
-        height: 62px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        img{
-          width: 100%;
-          border-radius: 10px;
-        }
-      }
-      p{
+  .a-container{
+    .a-aside{
+      display: none;
+    }
+    .abilities-list{
+      margin: 46px 0;
+      .item{
+        display: flex;
+        align-items: center;
         padding-left: 20px;
-        margin: 0;
-        font-size: 20px;
+        margin: 30px 0;
+        .img{
+          width: 62px;
+          height: 62px;
+          border: 1px solid #ccc;
+          border-radius: 10px;
+          img{
+            width: 100%;
+            border-radius: 10px;
+          }
+        }
+        p{
+          padding-left: 20px;
+          margin: 0;
+          font-size: 20px;
+        }
       }
     }
   }
@@ -392,6 +397,27 @@
       }
     }
   }
+  // abilities tablet
+  .abilities{
+    .a-container{
+      padding: 0 6%;
+      display: flex;
+      .a-aside{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img{
+          background-color: #fff;
+        }
+      }
+      .abilities-list{
+        margin: 0;
+        display: flex;
+      }
+    }
+  }
 
-
+  // portafolio tablet
+  .portafolio{}
+  
 }
