--- a/src/index.scss
+++ b/src/index.scss
@@ -402,6 +402,7 @@
     .a-container{
       padding: 0 6%;
       display: flex;
+      margin-top: 16px;
       .a-aside{
         display: flex;
         align-items: center;
@@ -418,6 +419,18 @@
   }
 
   // portafolio tablet
-  .portafolio{}
+  .portafolio{
+    .pf-list{
+      padding: 0 6% 6%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-top: 16px;
+      .pf-item{
+        margin: 30px 0 0;
+        width: 48%;
+      }
+    }
+  }
   
 }
