--- a/src/index.scss
+++ b/src/index.scss
@@ -237,21 +237,62 @@
   }
 }
 
-.about{
-  &.contacto{
+// contacto mobile 
+.contacto{
     margin-top: 0;
     padding: 46px 0;
     background-color: #F9F9FB;
+  .c-panel{
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    margin-top: 46px;
+    .c-p-header{
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        padding-left: 20px;
+        .image-circle{
+            // padding-left: 10px;
+          width: 60px;
+          height: 60px;
+            img{
+                border-radius: 50%;
+                width: 60px;
+                height: 60px;
+            }
+        }
+        .name-text{
+          padding-left: 20px;
+            h4{
+              font-size: 16px;
+              margin: 0;
+            }
+            p{
+                font-size: 14px;
+                margin: 0;
+            }
+        }
+        .button-primary{
+          display: none;
+        }
+    }
+    .panel-img{
+        margin-top: 10px;
+      width: 100%;
+      img{
+        width: 100%;
+      }
+    }
 
-  }
-  .panel{
-    .redes{
+    .c-p-redes{
       padding: 25px 0;
       margin-top: 10px;
       border-top: 1px solid #ccc;
       .red-item{
         margin: 20px 0;
         padding-left: 20px;
+        display: flex;
+        align-items: center;
         p{
           display: inline;
           padding-left: 10px;
@@ -260,6 +301,7 @@
     }
   }
 }
+
 
 .footer{
   padding: 46px 20px 0;
@@ -433,4 +475,46 @@
     }
   }
   
+  // contacto tablet
+  .contacto{
+    padding: 50px 6%;
+    .title-section{
+      padding-left: 0;
+    }
+    .c-panel{
+      display: flex;
+      justify-content: space-around;
+      border: 1px solid #ccc;
+      .c-p-header{
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        justify-content: center;
+        .image-circle{
+          display: none;
+        }
+        .name-text{
+          padding: 0;
+          margin-bottom: 20px;
+          h4{
+            font-size: 1.4rem;
+            margin-bottom: 5px;
+          }
+          p{
+            font-size: 1.1rem;
+          }
+        }
+        .button-primary{
+          display: block;
+        }
+      }
+      .c-p-redes{
+        border: none;
+        .red-item{
+          padding: 0;
+        }
+      }
+    }
+  }
 }
