--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,14 @@
   padding: 14px 66px;
   outline: none;
   cursor: pointer;
+  letter-spacing: .08px;
+
+  &:hover{
+    background-color: rgba(29,185,84,.94);
+  }
 }
+
+
 .title-section{
     font-size: 24px;
     padding-left: 20px;
@@ -700,6 +707,21 @@
           
         }
       }
+    }
+  }
+
+  // contacto desktop
+  .contacto{
+    max-width: 935px;
+    margin: 50px auto;
+    padding: 0;
+
+    .title-section{
+      padding: 0;
+    }
+
+    .c-panel{
+      padding: 20px;
     }
   }
 }
