--- a/src/index.scss
+++ b/src/index.scss
@@ -843,7 +843,7 @@ $theme-color: $light-color;
   // abilities desktop
   .abilities{
     max-width: 935px;
-    margin: 50px auto;
+    margin: 50px auto 0;
 
     .title-section{
       padding-left: 0;
@@ -872,6 +872,7 @@ $theme-color: $light-color;
   .portafolio{
     max-width: 935px;
     margin: 50px auto;
+    padding: 0;
 
     .title-section{
       padding: 0;
