--- a/src/index.scss
+++ b/src/index.scss
@@ -69,6 +69,7 @@ $theme-color: $light-color;
 
 .button-primary{
   background-color: $base-color;
+  text-decoration: none;
   color: white;
   font-size: 16px;
   border: 0;
