--- a/src/App.scss
+++ b/src/App.scss
@@ -42,3 +42,72 @@
          url('./assets/fonts/lato-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
          url('./assets/fonts/lato-v16-latin-700.svg#Lato') format('svg'); /* Legacy iOS */
   }
+
+
+
+/*
+ *  Pure CSS ReactJS Logo Animation
+ *  Todos los derechos reservados para Alberto Schiabel
+ *  Autor: Alberto Schiabel
+ *  Github: https://github.com/jkomyno
+ *  Codepen: https://codepen.io/jkomyno/pen/wWLpgj
+ */
+ $width: 250px;
+ $x: 3;
+
+.circles {
+     width: $width;
+     height: $width;
+     position: relative;
+     perspective: 50000px;
+     color: #61DAFB;
+     
+     span {
+       position: absolute;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%, -50%);
+       display: block;
+       width: 18.4%;
+       height: 18.4%;
+       border-radius: 100%;
+       background: currentColor;
+     }
+     
+     div {
+       position: absolute;
+       width: 100%;
+       height: 100%;
+       border-left: $width / 25 solid;
+       border-right: $width / 65 solid;
+       border-top: $width / 25 solid transparent;
+       border-radius: 100%;
+       
+       @for $i from 1 through $x {
+         &:nth-child(#{$i}) {
+           animation: anim-#{$i} 1s linear infinite;
+         }
+       }
+     }
+   }
+   
+   @for $i from 1 through $x {
+     @keyframes anim-#{$i} {
+       from {
+         transform:
+           rotateZ(360deg / $x * $i)
+           rotateX(66deg)
+           rotateZ(0deg);
+       }
+       to {
+         transform:
+           rotateZ(360deg / $x * $i)
+           rotateX(66deg)
+           rotateZ(360deg);
+       }
+     }
+   }
+
+/*
+   END CODE Pure CSS ReactJS Logo Animation
+*/
