--- a/src/index.scss
+++ b/src/index.scss
@@ -144,11 +144,11 @@ $theme-color: $light-color;
 
 .input-change-theme{
   position: absolute;
-  top: 3%;
-  left: 6%;
+  top: 4%;
+  left: 8%;
   z-index: 200;
 
-  img{
+  svg{
     cursor: pointer;
   }
 
@@ -508,10 +508,6 @@ $theme-color: $light-color;
   .f-name{
     margin: 17px 0 68px 0;
 
-    img{
-      margin-bottom: 20px;
-    }
-
     h4{
       font-size: 20px;
       margin-bottom: 5px;
@@ -592,7 +588,7 @@ $theme-color: $light-color;
   .input-change-theme{
     top: 3%;
     left: inherit;
-    right: 3%;
+    right: 5%;
   }
   
   .header{
@@ -643,7 +639,7 @@ $theme-color: $light-color;
     .h-button{
       margin-top: 0;
       position: absolute;
-      top: 40px;
+      // top: 40px;
       top: 15%;
       z-index: 100;
       padding-left: 6%;
@@ -652,10 +648,11 @@ $theme-color: $light-color;
   }
 
   .about{
+
     .panel{
       margin: 46px 6%;
       display: grid;
-      grid-template-columns: 50% 50%;
+      grid-template-columns: initial;
       grid-template-rows: 1fr;
       border: none;
       border-left: 1px solid #ccc;
@@ -673,10 +670,13 @@ $theme-color: $light-color;
         grid-column: 2/3;
         grid-row: 1/3;
         height: 100%;
+
         img{
           height: 100%;
         }
+
       }
+
       .panel-description{
         margin: 0;
         border-bottom: 1px solid #ccc;
@@ -814,7 +814,8 @@ $theme-color: $light-color;
 @media only screen and (min-width : 992px) {
 
   .input-change-theme{
-    right: 2%;
+    right: 4%;
+    top: 8%;
   }
 
   // header desktop
@@ -830,6 +831,7 @@ $theme-color: $light-color;
         font-size: 2.5rem;
       }
     }
+
   }
 
   // about desktop
@@ -845,10 +847,10 @@ $theme-color: $light-color;
 
     .panel{
       margin: 0;
-      background-color: white;
       border: none;
-      // border: 1px solid #DBDBDB;
       border-radius: 4px;
+      background-color: white;
+      grid-template-columns: 50% 50%;
       grid-template-rows: max-content;
 
       .panel-header{
@@ -1079,10 +1081,10 @@ $theme-color: $light-color;
       .f-content{
         .f-name{
 
-          img{
-            background-color: #ccc;
-            border-radius: 5px;
-            width: 40px;
+          svg{
+            path:nth-child(1){
+              fill: #FFF;
+            }
           }
 
         }
@@ -1090,9 +1092,10 @@ $theme-color: $light-color;
         .f-hello{
           .f-h-link{
             a{
-              img{
-                background-color: #CCC;
-                border-radius: 5px
+              svg{
+                path{
+                  fill: #FFF;
+                }
               }
             }
           }
