--- a/src/App.scss
+++ b/src/App.scss
@@ -1,50 +1,3 @@
-/* mobile first */
-
-/* Fonts */
-
-/* https://github.com/majodev/google-webfonts-helper/ */
-/* lato-300 - latin */
-@font-face {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 300;
-    src: url('./assets/fonts/lato-v16-latin-300.eot'); /* IE9 Compat Modes */
-    src: local('Lato Light'), local('Lato-Light'),
-         url('./assets/fonts/lato-v16-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./assets/fonts/lato-v16-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-         url('./assets/fonts/lato-v16-latin-300.woff') format('woff'), /* Modern Browsers */
-         url('./assets/fonts/lato-v16-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./assets/fonts/lato-v16-latin-300.svg#Lato') format('svg'); /* Legacy iOS */
-  }
-  /* lato-regular - latin */
-  @font-face {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    src: url('./assets/fonts/lato-v16-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local('Lato Regular'), local('Lato-Regular'),
-         url('./assets/fonts/lato-v16-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./assets/fonts/lato-v16-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('./assets/fonts/lato-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('./assets/fonts/lato-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./assets/fonts/lato-v16-latin-regular.svg#Lato') format('svg'); /* Legacy iOS */
-  }
-  /* lato-700 - latin */
-  @font-face {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 700;
-    src: url('./assets/fonts/lato-v16-latin-700.eot'); /* IE9 Compat Modes */
-    src: local('Lato Bold'), local('Lato-Bold'),
-         url('./assets/fonts/lato-v16-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./assets/fonts/lato-v16-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-         url('./assets/fonts/lato-v16-latin-700.woff') format('woff'), /* Modern Browsers */
-         url('./assets/fonts/lato-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./assets/fonts/lato-v16-latin-700.svg#Lato') format('svg'); /* Legacy iOS */
-  }
-
-
-
 /*
  *  Pure CSS ReactJS Logo Animation
  *  Todos los derechos reservados para Alberto Schiabel
@@ -52,61 +5,55 @@
  *  Github: https://github.com/jkomyno
  *  Codepen: https://codepen.io/jkomyno/pen/wWLpgj
  */
- $width: 250px;
- $x: 3;
+$width: 250px;
+$x: 3;
 
 .circles {
-     width: $width;
-     height: $width;
-     position: relative;
-     perspective: 50000px;
-     color: #61DAFB;
-     
-     span {
-       position: absolute;
-       top: 50%;
-       left: 50%;
-       transform: translate(-50%, -50%);
-       display: block;
-       width: 18.4%;
-       height: 18.4%;
-       border-radius: 100%;
-       background: currentColor;
-     }
-     
-     div {
-       position: absolute;
-       width: 100%;
-       height: 100%;
-       border-left: $width / 25 solid;
-       border-right: $width / 65 solid;
-       border-top: $width / 25 solid transparent;
-       border-radius: 100%;
-       
-       @for $i from 1 through $x {
-         &:nth-child(#{$i}) {
-           animation: anim-#{$i} 1s linear infinite;
-         }
-       }
-     }
-   }
-   
-   @for $i from 1 through $x {
-     @keyframes anim-#{$i} {
-       from {
-         transform:
-           rotateZ(360deg / $x * $i)
-           rotateX(66deg)
-           rotateZ(0deg);
-       }
-       to {
-         transform:
-           rotateZ(360deg / $x * $i)
-           rotateX(66deg)
-           rotateZ(360deg);
-       }
-     }
-   }
+  width: $width;
+  height: $width;
+  position: relative;
+  perspective: 50000px;
+  color: #61dafb;
+
+  span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    width: 18.4%;
+    height: 18.4%;
+    border-radius: 100%;
+    background: currentColor;
+  }
+
+  div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: $width / 25 solid;
+    border-right: $width / 65 solid;
+    border-top: $width / 25 solid transparent;
+    border-radius: 100%;
+
+    @for $i from 1 through $x {
+      &:nth-child(#{$i}) {
+        animation: anim-#{$i} 1s linear infinite;
+      }
+    }
+  }
+}
+
+@for $i from 1 through $x {
+  @keyframes anim-#{$i} {
+    from {
+      transform: rotateZ(360deg / $x * $i) rotateX(66deg) rotateZ(0deg);
+    }
+    to {
+      transform: rotateZ(360deg / $x * $i) rotateX(66deg) rotateZ(360deg);
+    }
+  }
+}
 
 /*
    END CODE Pure CSS ReactJS Logo Animation
